--- a/style.css
+++ b/style.css
@@ -1,7 +1,119 @@
-#menu
-{
-	position: fixed;
-	width: 100%;
-	height: 35px;
-	background: white;
+header{
+    text-align: center;
+}
+
+#photos{
+	float: center;
+	background-color: white; /* דוגמה לסגנון */
+}
+#playlist{
+	float: center;
+	background-color: white; /* דוגמה לסגנון */
+}
+
+
+
+
+h2 {
+    text-align: center;
+    position: relative;
+    margin: 50px 0;
+    padding: 0 20px;
+}
+
+h2::before,
+h2::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    width: 32%; /* להקטין מעט כדי לא לגעת בטקסט */
+    border-top: 10px solid lightblue;
+}
+
+h2::before {
+    left: 0;
+}
+
+h2::after {
+    right: 0;
+}
+
+h2 span {
+    background: white; /* התאמה לרקע של הדף */
+    padding: 0 10px;
+    position: relative; /* מוודא שהטקסט יהיה מעל הקווים */
+    z-index: 1;
+}
+
+
+
+
+
+.small-image {
+    width: 400px; /* הגדרת רוחב התמונה */
+    height: auto; /* שמירה על פרופורציות התמונה */
+}
+.regular-text {
+    font-family: Arial, sans-serif; /* הגדרת גופן */
+    font-size: 20px; /* גודל טקסט רגיל */
+    font-weight: normal; /* משקל רגיל */
+}
+.big-bold-text {
+    font-family: Arial, sans-serif; /* גופן שונה */
+    font-size: 32px; /* גודל טקסט גדול יותר */
+    font-weight: bold; /* בולד */
+}
+.huge-bold-text {
+    font-family: Arial, sans-serif; /* גופן שונה */
+    font-size: 64px; /* גודל טקסט גדול יותר */
+    font-weight: bold; /* בולד */
+}
+.title-bold-text {
+    font-family: Arial, sans-serif; /* גופן שונה */
+    font-size: 18px; /* גודל טקסט גדול יותר */
+    font-weight: bold; /* בולד */
+}
+
+
+
+
+
+
+.logo {
+    float: right; /* משאיר את הלוגו בצד ימין */
+	width: 135px; /* הגדרת רוחב התמונה */
+    height: auto; 
+}
+.QR {
+    width: 250px; 
+    height: auto;
+    display: block; 
+    margin: 0 auto; 
+}
+.text-box-size {
+    width: 100%;
+    max-width: 400px;
+    height: 40px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-sizing: border-box;
+}
+.text-box-size-2 {
+    width: 100%;
+    max-width: 400px;
+    height: 150px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-sizing: border-box;
+}
+.v{
+    display: flex;
+    justify-content: center;  
+    align-items: center;      
+    margin: 0 auto;
+    background-color: #f5f5f5;  
 }
