--- a/style.css
+++ b/style.css
@@ -1,19 +1,42 @@
-header{
-    text-align: center;
+
+#menu{
+	position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    background-color: lightblue; 
+    z-index: 1000; 
+    padding: 0px 0; 
+    text-align: center; 
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1); 
+}
+#menu li{
+	display: inline;
+	margin: 0 8px;
+}
+#menu a {
+	text-decoration: none;
+	color: white;
+	padding: 5px 8px;
+}
+.title-bold-text {
+    font-family: Arial, sans-serif; 
+    font-size: 24px; 
+    font-weight: bold; 
+}
+.logo {
+    float: right; 
+	width: 100px; 
+    height: auto; 
 }
 
-#photos{
-	float: center;
-	background-color: white; /* דוגמה לסגנון */
-}
-#playlist{
-	float: center;
-	background-color: white; /* דוגמה לסגנון */
-}
 
 
 
 
+
+
+/* קו מרכזי בכותרת*/
 h2 {
     text-align: center;
     position: relative;
@@ -21,12 +44,11 @@ h2 {
     padding: 0 20px;
 }
 
-h2::before,
-h2::after {
+h2::before, h2::after {
     content: "";
     position: absolute;
     top: 50%;
-    width: 32%; /* להקטין מעט כדי לא לגעת בטקסט */
+    width: 30%; 
     border-top: 10px solid lightblue;
 }
 
@@ -38,52 +60,54 @@ h2::after {
     right: 0;
 }
 
-h2 span {
-    background: white; /* התאמה לרקע של הדף */
-    padding: 0 10px;
-    position: relative; /* מוודא שהטקסט יהיה מעל הקווים */
-    z-index: 1;
+
+
+
+
+
+.image {
+    width: 550px; 
+    height: auto; 
+	border: 5px solid #000;
+	margin: 10px;
 }
 
 
 
-
-
-.small-image {
-    width: 400px; /* הגדרת רוחב התמונה */
-    height: auto; /* שמירה על פרופורציות התמונה */
-}
 .regular-text {
-    font-family: Arial, sans-serif; /* הגדרת גופן */
-    font-size: 20px; /* גודל טקסט רגיל */
-    font-weight: normal; /* משקל רגיל */
+    font-family: Arial, sans-serif; 
+    font-size: 20px; 
+    font-weight: normal; 
 }
 .big-bold-text {
-    font-family: Arial, sans-serif; /* גופן שונה */
-    font-size: 32px; /* גודל טקסט גדול יותר */
-    font-weight: bold; /* בולד */
+    font-family: Arial, sans-serif; 
+    font-size: 24px; 
+    font-weight: bold; 
+	text-decoration: underline;
 }
 .huge-bold-text {
-    font-family: Arial, sans-serif; /* גופן שונה */
-    font-size: 64px; /* גודל טקסט גדול יותר */
-    font-weight: bold; /* בולד */
-}
-.title-bold-text {
-    font-family: Arial, sans-serif; /* גופן שונה */
-    font-size: 18px; /* גודל טקסט גדול יותר */
-    font-weight: bold; /* בולד */
+    font-family: Arial, sans-serif; 
+    font-size: 64px; 
+    font-weight: bold; 
 }
 
 
 
 
 
-
-.logo {
-    float: right; /* משאיר את הלוגו בצד ימין */
-	width: 135px; /* הגדרת רוחב התמונה */
-    height: auto; 
+.highlight-on-hover {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
+.highlight-on-hover:hover {
+    transform: scale(1.05); /* הגדלה קלה */
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3); /* צל שנותן עומק */
+    cursor: pointer;
+}
+
+
+
+
 .QR {
     width: 250px; 
     height: auto;
@@ -92,28 +116,43 @@ h2 span {
 }
 .text-box-size {
     width: 100%;
-    max-width: 400px;
+    max-width: 500px;
     height: 40px;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 8px;
     box-sizing: border-box;
+	background-color: #f5f5f5;  
+
 }
-.text-box-size-2 {
+.massage-box-size {
     width: 100%;
-    max-width: 400px;
+    max-width: 500px;
     height: 150px;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 8px;
     box-sizing: border-box;
+	background-color: #f5f5f5;  
 }
+.send-box-size {
+    width: 100%;
+    max-width: 500px;
+    height: 40px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-sizing: border-box;
+	background-color: lightblue;  
+
+}
+
 .v{
     display: flex;
     justify-content: center;  
     align-items: center;      
     margin: 0 auto;
-    background-color: #f5f5f5;  
 }
