--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
   .section {
 	padding: 100px 20px;
 	text-align: center;
+
   }
   .White-background{
 	max-width: 800px;
@@ -39,6 +40,9 @@ body {
 	line-height: 1.6;
 	font-size: 24px;
 	color: black;
+	margin-bottom: 120px;
+	margin-top: 120px;
+
   }
   
 
